--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
    servlet:
-      contextPath: /user-service
+      #contextPath: /user-service
+      contextPath: /
    port: 8085
 
 #DB Config
