Features: OutBoundSMS Implementation and Prescription Table Optimization    - Merged Fill Prescription Data with Prescription    - Added SMS Notification for Red Risk Patient    - Added Lifestyle and Prescription details in patient details    - MDT-4902

--- a/spice-service/bin/src/main/resources/application.yml
+++ b/spice-service/bin/src/main/resources/application.yml
@@ -13,12 +13,12 @@ spring:
       driver-class-name: org.postgresql.Driver
       url: jdbc:postgresql://mypostgres:5432/spice
       username : postgres
-      password : postgres
+      password : root
    flyway:
       locations: classpath:db/migration
       url: jdbc:postgresql://mypostgres:5432/spice
       user : postgres
-      password : postgres
+      password : root
       baseline-on-migrate: true
       out-of-order: true
    servlet:
