--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -33,6 +33,7 @@
 		<postgres-version>42.4.0</postgres-version>
 		<jose-version>0.5.5</jose-version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
+		<feign-version>1.4.7.RELEASE</feign-version>
 	</properties>
 
 	<dependencies>
@@ -170,6 +171,12 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-webmvc-core</artifactId>
 			<version>1.5.13</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
+			<version>${feign-version}</version>
 		</dependency>
 
 	</dependencies>
