--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       driver-class-name: org.postgresql.Driver
       url: jdbc:postgresql://mypostgres:5432/spice?serverTimezone=UTC
       username : postgres
-      password : postgres
+      password : root
    jpa:
       show-sql: true
       properties:
