--- a/servicediscovery/src/main/resources/application.yml
+++ b/servicediscovery/src/main/resources/application.yml
@@ -2,10 +2,5 @@ server:
   port: 8761
   
 eureka:
-  instance:
-    hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
