--- a/spice-service/src/main/resources/success_messages.properties
+++ b/spice-service/src/main/resources/success_messages.properties
@@ -4,6 +4,8 @@
 1003=Medical review summary fetched successfully.
 1004=Medical review list fetched successfully.
 1005=Medical review count fetched successfully.
+1006=Medical review static data fetched successfully.
+1007=Static Data fetched successfully.
 
 2000=Frequency added successfully.
 2001=Frequency fetched successfully.
