--- a/admin-service/bin/src/main/resources/success_messages.properties
+++ b/admin-service/bin/src/main/resources/success_messages.properties
@@ -5,7 +5,7 @@
 11003=Got All Counties.
 11004=Got County.
 #1005=User information successfully deleted. 
-#1006=Got user meta data successfully.
+1006=Got user meta data successfully.
 
 #User 
 15001=User created successfully. 
