--- a/servicediscovery/pom.xml
+++ b/servicediscovery/pom.xml
@@ -13,7 +13,7 @@
 	<version>1.1-SNAPSHOT</version>
 
 	<properties>
-		<java.version>17</java.version>
+		<!-- <java.version>17</java.version>-->
 		<spring-cloud.version>2021.0.0</spring-cloud.version>
 	</properties>
 
