--- a/spice-service/src/main/resources/error_messages.properties
+++ b/spice-service/src/main/resources/error_messages.properties
@@ -1,4 +1,5 @@
 1000=Request should not be empty.
+1001=Error while converting Java Object to Json.
 
 2001=Medical Review not found for this patient.
 
