--- a/spice-service/bin/src/main/resources/application.yml
+++ b/spice-service/bin/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 server:
    servlet:
-      contextPath: /spice-service
+      #contextPath: /spice-service
+      contextPath: /
    port: 8087
 
 #DB Config
 spring:
    application:
-      name: spice
+      name: spice-service
    main:
       allow-bean-definition-overriding: true
    datasource:
@@ -14,13 +15,6 @@ spring:
       url: jdbc:postgresql://mypostgres:5432/spice
       username : postgres
       password : root
-   flyway:
-      locations: classpath:db/migration
-      url: jdbc:postgresql://mypostgres:5432/spice
-      user : postgres
-      password : root
-      baseline-on-migrate: true
-      out-of-order: true
    servlet:
       multipart:
          max-file-size: 15MB
@@ -62,6 +56,10 @@ logging:
    level:
       org.springframework: WARN
       org.hibernate: WARN
+      
+springdoc:
+  packagesToScan: com.mdtlabs.coreplatform.spiceservice
+  
 app:
    url: http://localhost
    sendgrid-apikey: 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
