Fix:   -  New fields added in screening log   - changed Insurance_status field type from boolean to string   - Added screening_date_time field in screening log Feature : Region related changes   - Added necessay DTOs for region APIs

--- a/spice-service/bin/src/main/resources/error_messages.properties
+++ b/spice-service/bin/src/main/resources/error_messages.properties
@@ -1,4 +1,5 @@
 1000=Request should not be empty.
+1001=Error while converting Java Object to Json.
 
 2001=Medical Review not found for this patient.
 
@@ -24,6 +25,7 @@
 # Screening error message codes
 9004=Screening log not found.
 9005=Screening id should not be empty.
+9006=Invalid Site.
 
 10005=Other lab test not found.
 10006=You are not allowed to add a same lab test at a time.
