--- a/spice-service/src/main/resources/error_messages.properties
+++ b/spice-service/src/main/resources/error_messages.properties
@@ -25,6 +25,7 @@
 # Screening error message codes
 9004=Screening log not found.
 9005=Screening id should not be empty.
+9006=Invalid Site.
 
 10005=Other lab test not found.
 10006=You are not allowed to add a same lab test at a time.
