--- a/user-service/src/main/resources/error_messages.properties
+++ b/user-service/src/main/resources/error_messages.properties
@@ -6,6 +6,8 @@
 1012=New password cannot be same as old password
 1013=User is blocked.
 1014=Password cannot be same as user name
+1102=Invalid request ID.
+1103=User already exists.
 2001=Role not saved.
 2002=Failed to get role.
 2003=Failed to update role.
@@ -26,3 +28,4 @@
 4011=Email not sent.
 4012=Don't have a permission. Please contact administrator.
 4013=Token parse exception
+5000=Users should not be empty.
