--- a/spice-service/src/main/resources/error_messages.properties
+++ b/spice-service/src/main/resources/error_messages.properties
@@ -21,6 +21,7 @@
 
 #Bplog details
 8001=Should have minimum two Bplog details
+8002=Mandatory fields are required(avg_systolic,avg_diastolic,regular_smoker);
 
 # Screening error message codes
 9004=Screening log not found.
