--- a/spice-service/src/main/resources/success_messages.properties
+++ b/spice-service/src/main/resources/success_messages.properties
@@ -1,4 +1,6 @@
 1001=Assessment created successfully for a patient.
+1011=BP Log created successfully.
+1012=Glucose Log created successfully.
 
 1002=Medical review created successfully for a patient.
 1003=Medical review summary fetched successfully.
@@ -72,3 +74,5 @@
 2003=Got Patient Nutrition Lifestyles.
 2004=Patient Nutrition Lifestyle deleted successfully.
 2005=Patient Nutrition Lifestyle View Status deleted successfully.
+
+
