Fix:   - Added update queries in schema.   - changes related to Country APIs.   - Added new field isHtnDiagnosis for screeningLog entity.   - MDT-4902

--- a/spice-service/src/main/resources/success_messages.properties
+++ b/spice-service/src/main/resources/success_messages.properties
@@ -75,4 +75,7 @@
 2004=Patient Nutrition Lifestyle deleted successfully.
 2005=Patient Nutrition Lifestyle View Status deleted successfully.
 
+#Device details 
+2006=Device Details Saved Successfully.
+
 
