--- a/admin-service/src/main/resources/error_messages.properties
+++ b/admin-service/src/main/resources/error_messages.properties
@@ -59,3 +59,7 @@
 28009=No LabTest result range found for this LabTest result ID.
 28010=Invalid LabTest result ID.
 
+#Common to all services
+20001=Don't have a permission. Please contact administrator.
+20002=Invalid token.
+
