--- a/spice-service/src/main/resources/error_messages.properties
+++ b/spice-service/src/main/resources/error_messages.properties
@@ -75,3 +75,7 @@
 28011=Patient Nutrition lifestyle not found for this ID.
 28012=Invalid Lifestyle ID.
 
+#Common to all services
+20001=Don't have a permission. Please contact administrator.
+20002=Invalid token.
+
