--- a/user-service/src/main/resources/error_messages.properties
+++ b/user-service/src/main/resources/error_messages.properties
@@ -8,6 +8,8 @@
 1014=Password cannot be same as user name
 1102=Invalid request ID.
 1103=User already exists.
+1104=Unable to save user.
+1104=Unable to save user. User role missing.
 2001=Role not saved.
 2002=Failed to get role.
 2003=Failed to update role.
@@ -15,9 +17,7 @@
 3005=Password does not match.
 3009=Link has expired.
 3010=Email template not found.
-3011=Email not sent.
-3012=Don't have a permission. Please contact administrator.
-3013=Token parse exception
+3011=Error while sending email. Please try again later.
 4001=Organization not saved.
 4002=Failed to get organization.
 4003=Failed to update organization.
@@ -29,3 +29,7 @@
 4012=Don't have a permission. Please contact administrator.
 4013=Token parse exception
 5000=Users should not be empty.
+
+#Common to all services
+20001=Don't have a permission. Please contact administrator.
+20002=Invalid token.
